<resources>
    <string name="app_name">Converfit</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="welcome_list_adapter">
        <item name="iniciar">Iniciar sesión</item>
    </string-array>
    <string name="title_activity_login"> </string>
    <string name="cancelar">Cancelar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="olvidar_contraseña">¿Has olvidado tu contraseña?</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="errorServidor">No se ha podido establecer conexión con el servidor. Compruebe si tiene acceso a la red y vuelva a intentarlo.</string>
    <string name="buscando">Buscando</string>
    <string name="buscarServidor">Conectando con el servidor</string>
    <string name="registrando">Registrando usuario</string>
    <string name="system_closed">El sistema está temporalmente cerrado. Por favor inténtelo mas tarde.</string>
    <string name="db_connection_error">Ha ocurrido un error en la conexión con la base de datos.</string>
    <string name="session_key_not_valid">Su sesión ha expirado.</string>
    <string name="input_data_missing">Falta alguno de los campos del formulario.</string>
    <string name="email_in_use">El email está siendo usado por otro usuario.</string>
    <string name="email_not_in_use">El email no está siendo usado por ningún usuario.</string>
    <string name="email_not_valid">No existe un usuario con ese email.</string>
    <string name="email_or_password_not_valid">El correo electrónico o la contraseña que has introducido no son válidos.</string>
    <string name="old_password_not_valid">La contraseña no es válida.</string>
    <string name="list_conversations_empty">El usuario no tiene conversaciones abiertas.</string>
    <string name="list_brands_empty">El listado de marcas está vacío.</string>
    <string name="list_favorites_empty">No hay usuarios siguiendo a esta marca.</string>
    <string name="brand_username_not_valid">El nombre de usuario de la empresa no ha sido encontrado.</string>
    <string name="brand_not_active">La empresa ha sido desactivada y no puede recibir mensajes.</string>
    <string name="brand_in_user_favorites">La empresa ya se encuentra en el listado de favoritos.</string>
    <string name="brand_not_in_user_favorites">La empresa ya no se encuentra en el listado de favoritos.</string>
    <string name="user_not_active">Es necesario verificar su correo, revise su correo y verifique su cuenta. Puede que el correo llegue a su cuenta de Spam.</string>
    <string name="list_messages_empty">La parte de conversación no tiene ningún mensaje.</string>
    <string name="conversation_permission_denied">El usuario no tiene permisos para acceder a esta conversación.</string>
    <string name="conversation_not_active">La conversación ya había sido desactivada.</string>
    <string name="campos_vacios">Debe rellenar todos los campos del formulario</string>
    <string name="formato_email">Email no válido, tiene que tener el formato de email.</string>
    <string name="formato_nombre">El nombre tiene un formato no válido, tiene que tener entre 3 y 50 caracteres.</string>
    <string name="formato_apellidos">Los apellidos tiene un formato no válido, tiene que tener entre 3 y 50 caracteres.</string>
    <string name="formato_contraseña">La contraseña tiene un formato no válido, tiene que tener entre 4 y 25 caracteres.</string>
    <string name="pass_actual">La contraseña actual tiene un formato no válido, tiene que tener entre 4 y 25 caracteres.</string>
    <string name="pass_nueva">La contraseña nueva tiene un formato no válido, tiene que tener entre 4 y 25 caracteres.</string>
    <string name="errorLLamada">No se ha podido realizar la llamada. Por favor intentelo mas tarde.</string>
    <string name="admin_not_active">El administrador se encuentra inactivo.</string>
    <string name="default_error">No se ha podido establecer conexión con el servidor. Compruebe si tiene acceso a la red y vuelva a intentarlo.</string>
    <string name="conexion_error">No se ha podido establecer conexión con el servidor. Compruebe si tiene acceso a la red y vuelva a intentarlo.</string>
    <string name="app_version_error">La versión que estás utilizando no está soportada. Es necesario actualizar.</string>
    <string name="guardarOk">guardarOk</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="brand_user_blocked">Su cuenta de usuario ha sido bloqueada para esta marca.</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="condiciones_servicio">Condicines de Servicio</string>
    <string name="politica_privacidad">Política de Privacidad</string>
    <string name="uso_cookies">Uso de Cookies</string>
    <string name="title_activity_term_service">TermServiceActivity</string>
    <string name="condiciones_uso">Condiciones de uso</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="title_activity_use_cookies">UseCookies</string>
    <string name="title_activity_recover_password">RecoverPasswordActivity</string>
    <string name="recuperar_pass">Recuperar contraseña</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="revisar_titulo">Revise su correo electrónico</string>
    <string name="revisar_mensaje">Siga las instrucciones que se indican en el correo para recuperar su contraseña</string>
    <string name="validar_email">Hemos enviado un correo electrónico, revíselo para validar su cuenta. Puede que el correo llegue a su cuenta de Spam.</string>
    <string-array name="settings_menu">
        <item name="iniciar">Perfil</item>
        <item name="crear">Cerrar sesión</item>
    </string-array>
    <string name="title_activity_settings_menu">Ajustes</string>
    <string name="title_activity_account_menu">Cuenta</string>
    <string-array name="account_menu">
        <item name="iniciar">Cerrar sesión</item>
        <item name="crear">Eliminar mi cuenta</item>
    </string-array>
    <string name="title_activity_delete_account">DeleteAccount</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="advertencia">¡Advertencia!</string>
    <string name="advertencia_mensaje">Esta operación no podrá deshacerse. Para poder eliminar su cuenta pulse en el botón “Eliminar Cuenta”. Una vez haya confirmado que quiere eliminar su cuenta, todo su listado de favoritos y de mensajes serán eliminados y no podrán recuperarse.</string>
    <string-array name="profile_menu">
        <item name="datos_personales">Datos personales</item>
        <item name="password">Contraseña</item>
    </string-array>
    <string name="title_activity_profile_menu">Perfil</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="title_activity_personal_data">PersonalDataActivity</string>
    <string name="cambios_realizados">Los cambios se han realizado correctamente</string>
    <string name="setting_email_mensaje">Para poder almacenar un nuevo correo electrónico es necesario pasar el proceso de verificación. Una vez guarde el nuevo correo electrónico su cuenta quedará inactivada temporalmente mientras se valida su correo electrónico.</string>
    <string name="title_activity_email_settings">EmailSettingsActivity</string>
    <string name="title_activity_password_menu">Contraseña</string>
    <string-array name="password_menu">
        <item name="iniciar">Cambiar contraseña</item>
        <item name="crear">Recuperar contraseña</item>
    </string-array>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="pass_actu">Contraseña actual</string>
    <string name="pass_new">Nueva Contraseña</string>
    <string name="recuperar_pass_mensaje">Para poder recuperar su contraseña y confirmar que no se está suplantando tu identidad, enviaremos un correo electrónico con las instrucciones para recuperar la contraseña. Tu cuenta se mantendrá activa en todo momento.</string>
    <string name="title_activity_recover_passord_acitivy">RecoverPassordAcitivy</string>
    <string name="eliminar_mensaje">Su cuenta ha sido borrada.</string>
    <string name="description_avatar">Imagen avatar brand</string>
    <string name="description_fav">ImagenIconoFavorito</string>
    <string name="title_activity_list_brand">Buscar</string>
    <string name="title_activity_list_favorites">Usuarios</string>
    <string name="image_new_mensaje">Nuevo Mensaje</string>
    <string name="title_activity_list_conversations">Chats</string>
    <string name="ayer">Ayer</string>
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="title_activity_list_messages_acitity">ListMessagesAcitity</string>
    <string name="title_activity_tab_contenedora">TabContenedoraActivity</string>
    <string name="title_activity_list_elegible_favorites_acitivy">ListElegibleFavoritesAcitivy
    </string>
    <string name="title_activity_info_brand">Información</string>
    <string name="descripcion">Descripción</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="llamar">Llamar</string>
    <string name="elegir_opcion">Elija una opción</string>
    <string-array name="opciones_menu_contextual_list_conversations">
        <item name="crear">Obtener información del usuario.</item>
        <item name="iniciar">Eliminar Conversacion.</item>
    </string-array>
    <string-array name="opciones_menu_contextual_list_favorites">
        <item name="bloquear">Bloquear usuario.</item>
        <item name="desbloquear">Desbloquear usuario.</item>
        <item name="crear">Obtener información de la usuario.</item>
    </string-array>
    <string name="mensajes_anteriores">Cargar mensajes anteriores</string>
    <string name="title_activity_mostrar_imagen">MostrarImagenActivity</string>
    <string-array name="camera_options_menu">
        <item name="tomar_foto">Sacar foto</item>
        <item name="album">Album</item>
    </string-array>
    <string name="enviar">Enviar</string>
    <string name="title_activity_visor_pdf">VisorPDFActivity</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_sub_fav_brands">SubFavBrandsActivity</string>
    <string name="exclamacion_reenviar_mensaje">!</string>
    <string-array name="opciones_reenviar_mensaje">
        <item name="reenviar_fallidos">Reenviar mensajes fallidos.</item>
        <item name="borrar_fallidos">Borrar mensajes fallidos.</item>
        <item name="cancelar_fallidos">Cancelar.</item>
    </string-array>
    <string name="conversation_closed">La conversación a la que intenta acceder ha sido cerrada. Si quiere contactar con la empresa, por favor, inicie una nueva.</string>
    <string name="conversation_cancelled">La conversación a la que intenta acceder ha sido cancelada. Si quiere contactar con la empresa, por favor, inicie una nueva.</string>
    <string name="asignar_conversacion">Asignar conversación</string>
    <string name="desasignar_conversacion">Desasignar conversación</string>
    <string name="encuesta_enviada">Encuesta enviada:</string>
    <string name="encuesta_recibida">Respuesta recibida</string>
    <string name="version">version 1.0.0</string>
    <string name="estilo_encuesta">"<style>body { font-family: HelveticaNeue; font-size:14px } b{font-size:10px}</style>"</string>
    <string name="title_activity_chat_web_fragment">Online</string>
    <string name="registrar_login">Regístrate en Converfit</string>
    <string name="conectados">CONECTADOS</string>
</resources>